styles/_snippets/_media.scss
$screen-sm-min: 768px;
$screen-xs-max: $screen-sm-min - 1;

$li-height: 195px;

@media screen and (max-width: $screen-xs-max) { 
	
	#schedule .row .session:nth-last-child(2) {
		border-top: 1px dotted #010101;
		border-bottom: 1px dotted #010101;
	}
	
	.sponsor img {
		height: 64px;
	}	
	
	#volunteers .volunteers-list {
		
		.volunteer {
			height: 150px;
			margin: 0 5px 5px 0;
		}
		
		img {
			width: 100px;
			height: 100px;
		}
	}
}

